cros: Fix SystemWebDialogTest under --mash

This browser test was directly accessing ash::Shell, which is in the
ash process under mash.

Introduce ash::mojom::ShellTestApi and use mojo to query for whether
or not a modal window is open.

Bug: 798797
Test: browser_tests --mash
Change-Id: I2bec2d7c6611999c9c28b5fb7ef1c361efece497
Reviewed-on: https://chromium-review.googlesource.com/852480
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527363}