ash/mojo_test_interface_factory.cc
@@ -9,9 +9,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "ash/metrics/time_to_first_present_recorder_test_api.h"
 #include "ash/public/interfaces/shelf_test_api.mojom.h"
+#include "ash/public/interfaces/shell_test_api.mojom.h"
 #include "ash/public/interfaces/system_tray_test_api.mojom.h"
 #include "ash/public/interfaces/time_to_first_present_recorder_test_api.mojom.h"
 #include "ash/shelf/shelf_test_api.h"
+#include "ash/shell_test_api.h"
 #include "ash/system/tray/system_tray_test_api.h"
 #include "base/bind.h"
 #include "base/single_thread_task_runner.h"
@@ -25,6 +27,10 @@ namespace {
 
 void BindShelfTestApiOnMainThread(mojom::ShelfTestApiRequest request) {
   ShelfTestApi::BindRequest(std::move(request));
+}
+
+void BindShellTestApiOnMainThread(mojom::ShellTestApiRequest request) {
+  ShellTestApi::BindRequest(std::move(request));
 }
 
 void BindSystemTrayTestApiOnMainThread(
@@ -43,6 +49,8 @@ void RegisterInterfaces(
     service_manager::BinderRegistry* registry,
     scoped_refptr<base::SingleThreadTaskRunner> main_thread_task_runner) {
   registry->AddInterface(base::Bind(&BindShelfTestApiOnMainThread),
+                         main_thread_task_runner);
+  registry->AddInterface(base::Bind(&BindShellTestApiOnMainThread),
                          main_thread_task_runner);
   registry->AddInterface(base::Bind(&BindSystemTrayTestApiOnMainThread),
                          main_thread_task_runner);
