ash/shell_test_api.h
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <memory>
 
+#include "ash/public/interfaces/shell_test_api.mojom.h"
 #include "base/macros.h"
 
 class PrefService;
@@ -22,10 +23,13 @@ class SystemGestureEventFilter;
 class WorkspaceController;
 
 // Accesses private data from a Shell for testing.
-class ShellTestApi {
+class ShellTestApi : public mojom::ShellTestApi {
  public:
   ShellTestApi();
   explicit ShellTestApi(Shell* shell);
+
+  // Creates and binds an instance from a remote request (e.g. from chrome).
+  static void BindRequest(mojom::ShellTestApiRequest request);
 
   MessageCenterController* message_center_controller();
   SystemGestureEventFilter* system_gesture_event_filter();
@@ -44,6 +48,9 @@ class ShellTestApi {
 
   // Simulates a modal dialog being open.
   void SimulateModalWindowOpenForTest(bool modal_window_open);
+
+  // mojom::ShellTestApi:
+  void IsSystemModalWindowOpen(IsSystemModalWindowOpenCallback cb) override;
 
  private:
   Shell* shell_;  // not owned
